--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ main {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  color: #2e2f42;
+  color: #404bbf;
   letter-spacing: 0.32px;
   text-decoration: none;
   padding: 24px 0;
