--- a/css/styles.css
+++ b/css/styles.css
@@ -95,19 +95,24 @@ main {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  color: #404bbf;
+  color: #2e2f42;
   letter-spacing: 0.32px;
   text-decoration: none;
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
+  display: block;
+}
+.menu.current {
+  color: #404bbf;
 }
 .menu:hover,
 .menu:focus {
   color: #404bbf;
 }
+.menu.current::after,
 .menu:hover::after {
-  width: 48px;
+  width: 100%;
   height: 4px;
   border-radius: 2px;
   background-color: #404bbf;
@@ -118,12 +123,7 @@ main {
   position: absolute;
   left: 0;
   bottom: -1px;
-}
-.portfolio-menu:hover::after {
-  width: 66px;
-}
-.contacts:hover::after {
-  width: 67px;
+  color: #404bbf;
 }
 
 .address {
@@ -158,7 +158,6 @@ main {
   flex-shrink: 0;
   text-align: center;
   max-width: 1440px;
-  margin: 0 auto;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -312,17 +311,24 @@ main {
 .icon-circle {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
-  background-color: #4d5ae5;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-circle:hover,
-.icon-circle:focus {
-  background-color: #31d0aa;
+.icon-link:hover,
+.icon-link:focus {
+  background-color: #404bbf;
+}
+.icon-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-social {
   fill: #f4f4fd;
@@ -388,7 +394,7 @@ main {
   width: calc((100% - 48px) / 3);
   position: relative;
   overflow: hidden;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
@@ -408,25 +414,22 @@ main {
   object-fit: cover;
 }
 .overlay {
-  width: 100%;
-  height: 100%;
-  bottom: -100%;
   left: 0;
-  background-color: #4d5ae5;
-  padding: 40px 32px;
-  position: absolute;
-  z-index: -1;
-  transform: translateY(100%);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.overlay-text {
   color: #f4f4fd;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
-  letter-spacing: 0.32px;
-  width: 296px;
+  letter-spacing: 0.02em;
+  position: absolute;
+  top: 0;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .portfolio-item:hover .overlay {
   transform: translateY(0);
   z-index: 1;
@@ -475,14 +478,38 @@ main {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  margin-left: 120px;
+}
+.logo-footer-n-text {
+  margin-right: 120px;
 }
 .social-media-icons {
   display: flex;
   gap: 16px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container-footer {
   display: flex;
   flex-direction: row;
+  align-items: baseline;
+}
+.icon-footer {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.icon-link-footer:hover,
+.icon-link-footer:focus {
+  background-color: #31d0aa;
+}
+.icon-link-footer {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
