--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,7 @@ main {
   flex-shrink: 0;
   text-align: center;
   max-width: 1440px;
+  margin: 0 auto;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
